# python_template_repo

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.venv  README.md  compose.yaml  devcontainer.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  vocs.config.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yaml  docs.yml  python-checks.yaml
docker/: Dockerfile
docs/: conf.py  styles.css
docs/components/: about.tsx  demo.tsx  footer.tsx
docs/pages/: blank.mdx  index.mdx
docs/pages/docs/: docs-syntax.mdx  index.mdx  structure.mdx
src/: __init__.py  __version__.py  logging.py
src/app/: Dockerfile  __init__.py  __main__.py
src/python_template_repo/: __init__.py  __metadata__.py  __version__.py  _types.py
src/python_template_repo/cli/: __init__.py  cli.py  config.py  spinner.py
src/python_template_repo/utils/: logging.py
src/utils/: logging.py
tests/: conftest.py  test_version.py
tests/cli/: test_cli.py
tests/unit/app/: __init__.py  test_some_module.py
